--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wacom-area-sizer"
-version = "0.1.1-dev"
+version = "0.2.0"
 description = "Update wacom tablet size with GUI"
 authors = [
     { name = "hyrodium", email = "hyrodium@gmail.com" }
